updated the model classes

--- a/notebooks/experiment-1.ipynb
+++ b/notebooks/experiment-1.ipynb
@@ -2,12 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "05a85cad",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, World!\n"
+     ]
+    }
+   ],
    "source": [
-    "import numpy as np "
+    "print(\"Hello, World!\")"
    ]
   }
  ],
