created the multi-agent class

--- a/notebooks/utils/llm.ipynb
+++ b/notebooks/utils/llm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "2c15fb00",
    "metadata": {},
    "outputs": [],
@@ -15,13 +15,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "5582039e",
    "metadata": {},
    "outputs": [],
    "source": [
     "class LLM: \n",
-    "    def __init__(self, model_name=\"gpt-4o\"): \n",
+    "    def __init__(self, model_name=\"openai/gpt-oss-120b\"): \n",
     "        if not model_name: \n",
     "            raise ValueError(\"model name is not defined\")\n",
     "        self.model_name = model_name\n",
@@ -33,24 +33,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "f527d8a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "llm_instance = LLM()\n",
+    "llm_model = llm_instance.get_model()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "47777314",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ChatGroq(client=<groq.resources.chat.completions.Completions object at 0x7a4e8c31ffa0>, async_client=<groq.resources.chat.completions.AsyncCompletions object at 0x7a4e7c378820>, model_name='gpt-4o', model_kwargs={}, groq_api_key=SecretStr('**********'))"
+       "AIMessage(content='Hello! How can I assist you today?', additional_kwargs={'reasoning_content': 'The user says \"Hi\". We need to respond appropriately. There\\'s no policy violation. Just greet and ask how can help.'}, response_metadata={'token_usage': {'completion_tokens': 44, 'prompt_tokens': 72, 'total_tokens': 116, 'completion_time': 0.093711722, 'prompt_time': 0.003439578, 'queue_time': 0.086228078, 'total_time': 0.0971513}, 'model_name': 'openai/gpt-oss-120b', 'system_fingerprint': 'fp_3a688838c3', 'service_tier': 'on_demand', 'finish_reason': 'stop', 'logprobs': None}, id='run--9be9ecbd-b86f-40cc-a651-641d5a010ebe-0', usage_metadata={'input_tokens': 72, 'output_tokens': 44, 'total_tokens': 116})"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "llm = LLM()\n",
-    "llm.get_model()"
+    "llm_model.invoke(\"Hi\")"
    ]
   }
  ],
