--- a/notebooks/toolkit/availability-tools.ipynb
+++ b/notebooks/toolkit/availability-tools.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "79cdbf7a",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "253b1148",
    "metadata": {},
    "outputs": [
@@ -24,7 +24,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/oladimeji/Desktop/projects/doctors-appointment-agent\n"
+      "/home/oladimeji/Desktop/projects/doctors-appointment-agent/notebooks/toolkit\n"
      ]
     }
    ],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "id": "d2bbffb4",
    "metadata": {},
    "outputs": [],
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "fa8ce757",
    "metadata": {},
    "outputs": [
@@ -170,7 +170,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>05-08-2024</td>\n",
+       "      <td>05-08-2024 08:00</td>\n",
        "      <td>general_dentist</td>\n",
        "      <td>john doe</td>\n",
        "      <td>True</td>\n",
@@ -179,7 +179,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>05-08-2024</td>\n",
+       "      <td>05-08-2024 08:30</td>\n",
        "      <td>general_dentist</td>\n",
        "      <td>john doe</td>\n",
        "      <td>False</td>\n",
@@ -188,7 +188,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>05-08-2024</td>\n",
+       "      <td>05-08-2024 09:00</td>\n",
        "      <td>general_dentist</td>\n",
        "      <td>john doe</td>\n",
        "      <td>False</td>\n",
@@ -197,7 +197,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>05-08-2024</td>\n",
+       "      <td>05-08-2024 09:30</td>\n",
        "      <td>general_dentist</td>\n",
        "      <td>john doe</td>\n",
        "      <td>False</td>\n",
@@ -206,7 +206,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>05-08-2024</td>\n",
+       "      <td>05-08-2024 10:00</td>\n",
        "      <td>general_dentist</td>\n",
        "      <td>john doe</td>\n",
        "      <td>False</td>\n",
@@ -224,7 +224,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4275</th>\n",
-       "      <td>03-09-2024</td>\n",
+       "      <td>03-09-2024 14:30</td>\n",
        "      <td>orthodontist</td>\n",
        "      <td>kevin anderson</td>\n",
        "      <td>True</td>\n",
@@ -233,7 +233,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4276</th>\n",
-       "      <td>03-09-2024</td>\n",
+       "      <td>03-09-2024 15:00</td>\n",
        "      <td>orthodontist</td>\n",
        "      <td>kevin anderson</td>\n",
        "      <td>True</td>\n",
@@ -242,7 +242,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4277</th>\n",
-       "      <td>03-09-2024</td>\n",
+       "      <td>03-09-2024 15:30</td>\n",
        "      <td>orthodontist</td>\n",
        "      <td>kevin anderson</td>\n",
        "      <td>True</td>\n",
@@ -251,7 +251,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4278</th>\n",
-       "      <td>03-09-2024</td>\n",
+       "      <td>03-09-2024 16:00</td>\n",
        "      <td>orthodontist</td>\n",
        "      <td>kevin anderson</td>\n",
        "      <td>True</td>\n",
@@ -260,7 +260,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4279</th>\n",
-       "      <td>03-09-2024</td>\n",
+       "      <td>03-09-2024 16:30</td>\n",
        "      <td>orthodontist</td>\n",
        "      <td>kevin anderson</td>\n",
        "      <td>True</td>\n",
@@ -273,18 +273,18 @@
        "</div>"
       ],
       "text/plain": [
-       "       date_slot   specialization     doctor_name  is_available  \\\n",
-       "0     05-08-2024  general_dentist        john doe          True   \n",
-       "1     05-08-2024  general_dentist        john doe         False   \n",
-       "2     05-08-2024  general_dentist        john doe         False   \n",
-       "3     05-08-2024  general_dentist        john doe         False   \n",
-       "4     05-08-2024  general_dentist        john doe         False   \n",
-       "...          ...              ...             ...           ...   \n",
-       "4275  03-09-2024     orthodontist  kevin anderson          True   \n",
-       "4276  03-09-2024     orthodontist  kevin anderson          True   \n",
-       "4277  03-09-2024     orthodontist  kevin anderson          True   \n",
-       "4278  03-09-2024     orthodontist  kevin anderson          True   \n",
-       "4279  03-09-2024     orthodontist  kevin anderson          True   \n",
+       "             date_slot   specialization     doctor_name  is_available  \\\n",
+       "0     05-08-2024 08:00  general_dentist        john doe          True   \n",
+       "1     05-08-2024 08:30  general_dentist        john doe         False   \n",
+       "2     05-08-2024 09:00  general_dentist        john doe         False   \n",
+       "3     05-08-2024 09:30  general_dentist        john doe         False   \n",
+       "4     05-08-2024 10:00  general_dentist        john doe         False   \n",
+       "...                ...              ...             ...           ...   \n",
+       "4275  03-09-2024 14:30     orthodontist  kevin anderson          True   \n",
+       "4276  03-09-2024 15:00     orthodontist  kevin anderson          True   \n",
+       "4277  03-09-2024 15:30     orthodontist  kevin anderson          True   \n",
+       "4278  03-09-2024 16:00     orthodontist  kevin anderson          True   \n",
+       "4279  03-09-2024 16:30     orthodontist  kevin anderson          True   \n",
        "\n",
        "      patient_to_attend time_slot  \n",
        "0                   NaN     08:00  \n",
@@ -302,15 +302,47 @@
        "[4280 rows x 6 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[[\"date_slot\", \"time_slot\"]] = df[\"date_slot\"].str.split(\" \", expand=True)\n",
+    "df[\"time_slot\"] = df[\"date_slot\"].str.split(\" \", expand=True).iloc[:, 1]\n",
     "\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "46aa4666",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       08:00\n",
+       "1       08:30\n",
+       "2       09:00\n",
+       "3       09:30\n",
+       "4       10:00\n",
+       "        ...  \n",
+       "4275    14:30\n",
+       "4276    15:00\n",
+       "4277    15:30\n",
+       "4278    16:00\n",
+       "4279    16:30\n",
+       "Name: 1, Length: 4280, dtype: object"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"date_slot\"].str.split(\" \", expand=True).loc[:, 1]"
    ]
   },
   {
